--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 #regLogContainer {
   display: flex;
   flex-direction: row;
@@ -46,4 +49,26 @@ header button {
 }
 #addPostForm *{
   display:block;
+}
+.postCard{
+  width:300px;
+  height:300px;
+  border: 1px solid black;
+  overflow: hidden;
+}
+.postCard img{
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+}
+.postCard *{
+  margin: 0;
+  padding: 5px;
+}
+.postCard p{
+  margin:30px 0 0 0;
+}
+.postCard span{
+  float:right;
+  background: yellow;
 }
