--- a/style.css
+++ b/style.css
@@ -52,18 +52,18 @@ header button {
 }
 .postCard{
   width:300px;
-  height:300px;
   border: 1px solid black;
   overflow: hidden;
+  position: relative;
 }
-.postCard img{
+.postCard div img{
   width: 100%;
-  height: 150px;
-  object-fit: contain;
+  height: 100%;
+  object-fit: cover;
 }
 .postCard *{
   margin: 0;
-  padding: 5px;
+  padding: 0;
 }
 .postCard p{
   margin:30px 0 0 0;
@@ -71,4 +71,26 @@ header button {
 .postCard span{
   float:right;
   background: yellow;
+}
+#postCardImgContainer{
+  width: 100%;
+  height: 180px;
+}
+#postBtnContainer{
+  position: absolute;
+  height: fit-content;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+}
+#postBtnContainer button{
+  width: 20px;
+  height:20px;
+}
+#favBtn{
+  order:1;
+  margin-right:auto;
+}
+#favBtn:hover{
+  background-color: yellow;
 }
